@@ -58,6 +58,6 @@
 #endif /* NDEBUG */
 
 extern void panic_init();
-extern void panic (const char *s, ...);
+extern void panic (const char *s, ...) __attribute__ ((noreturn));
 
 #endif /* _mach_debug__debug_ */
